--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
    <meta charset="utf-8"> 
   <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,600,700|Permanent+Marker&display=swap&subset=cyrillic" rel="stylesheet">
-   <link rel="stylesheet" href="assests/css/style.css">
+   <link rel="stylesheet" href="style.css">
    <title>Volodya</title>
     
  </head>
